FullQa New/src/FinancialForce Reporting/objects/ReportingPrompt__c.object
<CustomObject>
    <customHelpPage>helpreportingprompt</customHelpPage>
    <fields>
        <fullName>DefaultValue__c</fullName>
        <label>Default Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PicklistValues__c</fullName>
        <label>Picklist Values</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PromptKey__c</fullName>
        <label>Prompt Key</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>RP01</fullName>
                </value>
                <value>
                    <fullName>RP02</fullName>
                </value>
                <value>
                    <fullName>RP03</fullName>
                </value>
                <value>
                    <fullName>RP04</fullName>
                </value>
                <value>
                    <fullName>RP05</fullName>
                </value>
                <value>
                    <fullName>RP06</fullName>
                </value>
                <value>
                    <fullName>RP07</fullName>
                </value>
                <value>
                    <fullName>RP08</fullName>
                </value>
                <value>
                    <fullName>RP09</fullName>
                </value>
                <value>
                    <fullName>RP10</fullName>
                </value>
                <value>
                    <fullName>RP11</fullName>
                </value>
                <value>
                    <fullName>RP12</fullName>
                </value>
                <value>
                    <fullName>RP13</fullName>
                </value>
                <value>
                    <fullName>RP14</fullName>
                </value>
                <value>
                    <fullName>RP15</fullName>
                </value>
                <value>
                    <fullName>RP16</fullName>
                </value>
                <value>
                    <fullName>RP17</fullName>
                </value>
                <value>
                    <fullName>RP18</fullName>
                </value>
                <value>
                    <fullName>RP19</fullName>
                </value>
                <value>
                    <fullName>RP20</fullName>
                </value>
                <value>
                    <fullName>RP21</fullName>
                </value>
                <value>
                    <fullName>RP22</fullName>
                </value>
                <value>
                    <fullName>RP23</fullName>
                </value>
                <value>
                    <fullName>RP24</fullName>
                </value>
                <value>
                    <fullName>RP25</fullName>
                </value>
                <value>
                    <fullName>RP26</fullName>
                </value>
                <value>
                    <fullName>RP27</fullName>
                </value>
                <value>
                    <fullName>RP28</fullName>
                </value>
                <value>
                    <fullName>RP29</fullName>
                </value>
                <value>
                    <fullName>RP30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReportingDefinition__c</fullName>
        <label>Reporting Definition</label>
        <referenceTo>ReportingDefinition__c</referenceTo>
        <relationshipLabel>Reporting Prompts</relationshipLabel>
        <relationshipName>ReportingPrompts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SortOrder__c</fullName>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Text</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Number</fullName>
                </value>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>Picklist</fullName>
                </value>
                <value>
                    <fullName>Accounting Period</fullName>
                </value>
                <value>
                    <fullName>Company</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Reporting Prompt</label>
    <nameField>
        <label>Reporting Prompt Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reporting Prompts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>